feat: complete gateway service with documentation and CORS fixes
- Fix CORS configuration to support both ports 3000 and 3001
- Add comprehensive README.md with setup and configuration guide
- Update route configuration documentation
- Improve CORS handling for frontend integration